--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /.tmp.driveupload
 /Curso Java Swing/PrimeiraJanela/nbproject/private/
 /Curso Java Swing/PrimeiraJanela/build/
+/Curso Java Swing/JogoAdvinhacao/nbproject/private/
