--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Curso Java Swing/PrimeiraJanela/nbproject/private/
 /Curso Java Swing/PrimeiraJanela/build/
 /Curso Java Swing/JogoAdvinhacao/nbproject/private/
+/Curso Java Swing/JogoForca/nbproject/private/
+/Curso Java Swing/JogoForca/build/
