--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Curso Java Swing/JogoAdvinhacao/nbproject/private/
 /Curso Java Swing/JogoForca/nbproject/private/
 /Curso Java Swing/JogoForca/build/
+/AEDS 3/TRABALHO 02/visualizacao.html
