--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.exe
+/.tmp.drivedownload
 /.tmp.driveupload
 /Curso Java Swing/PrimeiraJanela/nbproject/private/
 /Curso Java Swing/PrimeiraJanela/build/
