--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Curso Java Swing/JogoForca/nbproject/private/
 /Curso Java Swing/JogoForca/build/
 /AEDS 3/TRABALHO 02/visualizacao.html
+/LPR 1/Aula DB/DBTest/nbproject/private/
+/LPR 1/Aula DB/DBTest/build/
