--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /AEDS 3/TRABALHO 02/visualizacao.html
 /LPR 1/Aula DB/DBTest/nbproject/private/
 /LPR 1/Aula DB/DBTest/build/
+/LPR 1/ATIVIDADE 03/Ex01/target/
+/LPR 1/ATIVIDADE 03/Ex02/target/
