--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /LPR 1/Aula DB/DBTest/build/
 /LPR 1/ATIVIDADE 03/Ex01/target/
 /LPR 1/ATIVIDADE 03/Ex02/target/
+/LPR 1/Aula Swing 2/GUITest/target/
