--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /LPR 1/ATIVIDADE 03/Ex01/target/
 /LPR 1/ATIVIDADE 03/Ex02/target/
 /LPR 1/Aula Swing 2/GUITest/target/
+/LPR 1/Aula Swing/GUIHello2/nbproject/private/
+/LPR 1/Aula Swing/GUIHello2/build/
