--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /LPR 1/Aula Swing 2/GUITest/target/
 /LPR 1/Aula Swing/GUIHello2/nbproject/private/
 /LPR 1/Aula Swing/GUIHello2/build/
+/LPR 1/Aula Swing/GUIHello/nbproject/private/
+/LPR 1/Aula Swing/GUIHello/build/
