--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /LPR 1/Aula Swing/GUIHello2/build/
 /LPR 1/Aula Swing/GUIHello/nbproject/private/
 /LPR 1/Aula Swing/GUIHello/build/
+/LPR 1/Aula Swing 3/Teste/target/
