--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /LPR 1/Aula Swing/GUIHello/nbproject/private/
 /LPR 1/Aula Swing/GUIHello/build/
 /LPR 1/Aula Swing 3/Teste/target/
+/LPR 1/TRABALHO PRÁTICO 02/Ex01/target/
+/LPR 1/TRABALHO PRÁTICO 02/Ex02/target/
