--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /LPR 1/Aula Swing 3/Teste/target/
 /LPR 1/TRABALHO PRÁTICO 02/Ex01/target/
 /LPR 1/TRABALHO PRÁTICO 02/Ex02/target/
+/LPR 1/TRABALHO PRÁTICO 03/TelaLogin/target/
