--- a/LPR 1/TRABALHO PRÁTICO 03/TelaLogin/pom.xml
+++ b/LPR 1/TRABALHO PRÁTICO 03/TelaLogin/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>com.valdir.telalogin.TelaLogin</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+    </dependencies>
 </project>
