--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 *.exe
 /.tmp.drivedownload
 /.tmp.driveupload
-/Curso Java Swing/PrimeiraJanela/nbproject/private/
-/Curso Java Swing/PrimeiraJanela/build/
-/Curso Java Swing/JogoAdvinhacao/nbproject/private/
-/Curso Java Swing/JogoForca/nbproject/private/
-/Curso Java Swing/JogoForca/build/
+/.vscode
 /AEDS 3/TRABALHO 02/visualizacao.html
 /LPR 1/Aula DB/DBTest/nbproject/private/
 /LPR 1/Aula DB/DBTest/build/
